fixed h1 overlap

--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,7 @@ footer {
   h1 {
     text-align: center;
     font-size: 60px;
+    padding-top: 24px;
   }
   .subheader {
     text-align: center;
